--- a/step.yml
+++ b/step.yml
@@ -5,9 +5,9 @@ website: https://github.com/bitrise-steplib/steps-file-downloader
 source_code_url: https://github.com/bitrise-steplib/steps-file-downloader
 support_url: https://github.com/bitrise-steplib/steps-file-downloader/issues
 host_os_tags: []
-project_type_tags:
-  - script
+project_type_tags: []
 type_tags:
+  - script
 is_requires_admin_user: false
 is_always_run: false
 is_skippable: false
