--- a/step.yml
+++ b/step.yml
@@ -12,7 +12,7 @@ is_requires_admin_user: false
 is_always_run: false
 is_skippable: false
 dependencies: []
-run_if: ""
+run_if: ".IsCI"
 inputs:
   - source:
     opts:
