--- a/step.yml
+++ b/step.yml
@@ -7,22 +7,22 @@ support_url: https://github.com/bitrise-steplib/steps-file-downloader/issues
 host_os_tags: []
 project_type_tags: []
 type_tags:
-  - script
+- utility
 is_requires_admin_user: false
 is_always_run: false
 is_skippable: false
 dependencies: []
 run_if: ".IsCI"
 inputs:
-  - source:
-    opts:
-      title: Download source url
-      description: |
-        Download source url
-      is_required: true
-  - destination:
-    opts:
-      title: Download destination path
-      description: |
-        Download destination path
-      is_required: true
+- source:
+  opts:
+    title: Download source url
+    description: |
+      Download source url
+    is_required: true
+- destination:
+  opts:
+    title: Download destination path
+    description: |
+      Download destination path
+    is_required: true
