--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,15 +1,24 @@
-format_version: 1.2.0
+format_version: "5"
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 
 app:
   envs:
-  - SOURCE: $SOURCE
+  - STEP_VERSION: 0.9.1
+  - SOURCE: https://raw.githubusercontent.com/bitrise-samples/sample-artifacts/master/filestructure/debug.apk
 
 workflows:
   # ----------------------------------------------------------------
   # --- workflow to Step Test
   test:
+    before_run:
+    - audit-this-step
     steps:
+    - script:
+        inputs:
+        - content: |-
+            #!/bin/bash
+            set -ex
+            rm -rf "./_tmp"
     - change-workdir:
         title: Switch working dir to test / _tmp dir
         description: |-
@@ -26,21 +35,57 @@ workflows:
         inputs:
         - source: $SOURCE
         - destination: release.apk
+    - script:
+        title: Output test
+        inputs:
+        - content: |
+            #!/usr/bin/env bash
+            if [[ ! -e "release.apk" ]]; then
+                echo "Does not exist: release.apk"
+                exit 1
+            fi
     - path::./:
         title: Step Test
         inputs:
         - source: $SOURCE
         - destination: ./dir/release.apk
+    - script:
+        title: Output test
+        inputs:
+        - content: |
+            #!/usr/bin/env bash
+            if [[ ! -e "./dir/release.apk" ]]; then
+                echo "Does not exist: ./dir/release.apk"
+                exit 1
+            fi
     - path::./:
         title: Step Test
         inputs:
         - source: $SOURCE
         - destination: .my/destination/dir/release.apk
+    - script:
+        title: Output test
+        inputs:
+        - content: |
+            #!/usr/bin/env bash
+            if [[ ! -e ".my/destination/dir/release.apk" ]]; then
+                echo "Does not exist: .my/destination/dir/release.apk"
+                exit 1
+            fi
     - path::./:
         title: Step Test
         inputs:
         - source: $SOURCE
         - destination: ~/destination/dir/release.apk
+    - script:
+        title: Output test
+        inputs:
+        - content: |
+            #!/usr/bin/env bash
+            if [[ ! -e "$HOME/destination/dir/release.apk" ]]; then
+                echo "Does not exist: ~/destination/dir/release.apk"
+                exit 1
+            fi
 
   # ----------------------------------------------------------------
   # --- workflows to create Release
@@ -51,33 +96,28 @@ workflows:
         inputs:
         - content: |
             #!/bin/bash
-            set -e
-
+            set -ex
+            go get -u github.com/bitrise-tools/releaseman
             export CI=true
-            releaseman create --bump-version patch
-
-  create-release-version:
-    envs:
-    - RELEASE_VERSION: 0.9.1
-    steps:
-    - script:
-        title:
-        inputs:
-        - content: |
-            #!/bin/bash
-            set -e
-
-            export CI=true
-            releaseman create --version $RELEASE_VERSION
+            releaseman create --version $STEP_VERSION
 
   # ----------------------------------------------------------------
   # --- workflow to Share this step into a Step Library
+  audit-this-step:
+    steps:
+    - script:
+        inputs:
+        - content: |-
+            #!/bin/bash
+            set -ex
+            stepman audit --step-yml ./step.yml
+
   share-this-step:
     envs:
       # if you want to share this step into a StepLib
       - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
       - STEP_ID_IN_STEPLIB: file-downloader
-      - STEP_GIT_VERION_TAG_TO_SHARE: 0.9.1
+      - STEP_GIT_VERION_TAG_TO_SHARE: $STEP_VERSION
       - STEP_GIT_CLONE_URL: https://github.com/bitrise-steplib/steps-file-downloader.git
     description: |-
       If this is the first time you try to share a Step you should
@@ -100,16 +140,14 @@ workflows:
 
       Once it finishes the only thing left is to actually create a Pull Request,
       the way described in the guide printed at the end of the process.
+    before_run:
+    - audit-this-step
     steps:
     - script:
         inputs:
         - content: |-
             #!/bin/bash
-            set -e
-            set -x
-
+            set -ex
             bitrise share start -c ${MY_STEPLIB_REPO_FORK_GIT_URL}
-
             bitrise share create --stepid ${STEP_ID_IN_STEPLIB} --tag ${STEP_GIT_VERION_TAG_TO_SHARE} --git ${STEP_GIT_CLONE_URL}
-
             bitrise share finish
