Should be "Downloads" instead of "Downloands"

--- a/step.yml
+++ b/step.yml
@@ -1,6 +1,6 @@
 title: File Downloader
-summary: Downloands file
-description: Downloands file
+summary: Downloads file
+description: Downloads file
 website: https://github.com/bitrise-steplib/steps-file-downloader
 source_code_url: https://github.com/bitrise-steplib/steps-file-downloader
 support_url: https://github.com/bitrise-steplib/steps-file-downloader/issues
